--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -22,6 +22,8 @@ defaultDashboards:
     enabled: true
 
 grafana:
+  vmScrape:
+    enabled: true
   admin:
     existingSecret: grafana-secrets
     userKey: grafana-admin-user
