--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -10,6 +10,9 @@ vmsingle:
   enabled: true
   spec:
     retentionPeriod: 50y
+    env:
+      - name: search_cacheTimestampOffset
+        value: "360d"
     serviceSpec:
       spec:
         type: LoadBalancer
