--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -12,7 +12,7 @@ vmsingle:
     retentionPeriod: 50y
     extraEnvs:
       - name: search_cacheTimestampOffset
-        value: "51840m"
+        value: "8000h"
       - name: search_cacheMaxAge
         value: "360d"
       - name: influx_databaseNames
