--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -17,7 +17,7 @@ vmsingle:
         value: "360d"
       - name: influx_databaseNames
         value: "iotawatt"
-    extraArgs:
+    extraArgs: {}
       #maxLabelsPerTimeSeries: "1000"
     serviceSpec:
       spec:
