--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/secrets/secret-generator.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/secrets/secret-generator.yaml
@@ -7,4 +7,5 @@ metadata:
         exec:
           path: ksops
 files:
-  - ./manifests/secrets.yaml
+  - ./manifests/secrets/secrets.yaml
+  - ./manifests/secrets/homeassistant.yaml
