--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmscrape/homeassistant.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmscrape/homeassistant.yaml
@@ -5,13 +5,18 @@ metadata:
 spec:
   bearerTokenSecret:
     name: homeassistant-token
-    key: token
-  consulSDConfigs:
-  - server: https://consul-dns:8500
-    services:
-    - mongodb
-  relabelConfigs:
-  - action: replace
-    sourceLabels:
-    - __meta_consul_service
-    targetLabel: job
+    key: bearer_token
+  scrape_interval: 60s
+  staticConfigs:
+  - targets:
+    - homeassistant.yanello.net
+  path: /api/prometheus
+  # consulSDConfigs:
+  # - server: https://consul-dns:8500
+  #   services:
+  #   - mongodb
+  # relabelConfigs:
+  # - action: replace
+  #   sourceLabels:
+  #   - __meta_consul_service
+  #   targetLabel: job
