start hass scrape setup3

--- a/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./manifests/http-route.yaml
   - ./manifests/power-dash.yaml
+  - ./manifests/vmscrape/*
 
 generators:
   - ./manifests/secrets/secret-generator.yaml
