start hass scrape setup4

--- a/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./manifests/http-route.yaml
   - ./manifests/power-dash.yaml
-  - ./manifests/vmscrape/*
+  - ./manifests/vmscrape/homeassistant.yaml
 
 generators:
   - ./manifests/secrets/secret-generator.yaml
