start hass scrape setup5

--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmscrape/homeassistant.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmscrape/homeassistant.yaml
@@ -11,6 +11,7 @@ spec:
   - targets:
     - homeassistant.yanello.net
   path: /api/prometheus
+  scheme: https
   # consulSDConfigs:
   # - server: https://consul-dns:8500
   #   services:
