start hass scrape setup6

--- a/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - ./manifests/http-route.yaml
-  - ./manifests/power-dash.yaml
+  - ./manifests/dashboards/power-dash.yaml
   - ./manifests/vmscrape/homeassistant.yaml
 
 generators:
