allow authentik externally

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -37,6 +37,7 @@ spec:
               - immich.yanello.net
               - bitwarden.yanello.net
               - mealie.yanello.net
+              - authentik.yanello.net
     - from:
         - source:
             notRemoteIpBlocks:
