--- a/argocd/apps/infra/authentik/manifests/values.yaml
+++ b/argocd/apps/infra/authentik/manifests/values.yaml
@@ -47,30 +47,30 @@ redis:
     resources:
       requests:
         cpu: 300m
-        memory: 50Mb
+        memory: 50Mi
       limits:
         cpu: 500m
-        memory: 100Mb
+        memory: 100Mi
   replica:
     persistence:
       enabled: false
     resources:
       requests:
         cpu: 300m
-        memory: 50Mb
+        memory: 50Mi
       limits:
         cpu: 500m
-        memory: 100Mb
+        memory: 100Mi
   sentinel:
     persistence:
       enabled: false
     resources:
       requests:
         cpu: 300m
-        memory: 50Mb
+        memory: 50Mi
       limits:
         cpu: 500m
-        memory: 100Mb
+        memory: 100Mi
 postgresql:
   enabled: true
   primary:
@@ -81,10 +81,10 @@ postgresql:
     resources:
       requests:
         cpu: 100m
-        memory: 100Mb
+        memory: 100Mi
       limits:
         cpu: 200m
-        memory: 250Mb
+        memory: 250Mi
   auth:
     username: authentik
     database: authentik
