--- a/argocd/apps/infra/gitea/kustomization.yaml
+++ b/argocd/apps/infra/gitea/kustomization.yaml
@@ -4,10 +4,13 @@ kind: Kustomization
 resources:
   - ./manifests/http-route.yaml
 
+generators:
+  - ./manifests/secret-generator.yaml
+
 helmCharts:
     - name: gitea
       repo: https://dl.gitea.com/charts/
-      version: "1.5.5"
+      version: "11.0.1"
       releaseName: gitea
       namespace: gitea
       valuesFile: ./manifests/values.yaml
