authentik liveprobe timout increase

--- a/argocd/apps/infra/authentik/manifests/values.yaml
+++ b/argocd/apps/infra/authentik/manifests/values.yaml
@@ -39,6 +39,8 @@ worker:
     requests:
       cpu: 100m
       memory: 500Mi
+  livenessProbe:
+    timeoutSeconds: 5
 redis:
   enabled: true
   master:
