--- a/argocd/apps/infra/gitea/manifests/secrets.yaml
+++ b/argocd/apps/infra/gitea/manifests/secrets.yaml
@@ -6,11 +6,9 @@ type: Opaque
 stringData:
     key: ENC[AES256_GCM,data:xQmsuDU6ox/WRkB0njqs9DJDzbYYr63zKk1h5sj5rHDWESsRi0wqeA==,iv:YiTbqULZcVr+5uOHG4EOa7O+qeMsCiAoBx2wlZ1vC/A=,tag:1gEw2AY7QBJiQKFex3zWfw==,type:str]
     secret: ENC[AES256_GCM,data:zx+b9Y5H2qtqVakxrN+6L+O3LVUBMPF8re2oYbggZ/+U/zTuRHSCwWD+N1swPJvwzo05Xo0oW0csXYja6iiC4eMu4M1i6e04urcujJ+h1ZNCCz1RcNyx4HlXqsicB5gzNEypRkXd8/xkOdV0Nmf8xEC/pUSAFErAi62sTdAd4qQ=,iv:2Cel/wy5vZZpk5swfaV1ESdZhQC2KwVY3s8uzvUM9Vk=,tag:bN6cKePDx9Y1NTlFHCn4Zg==,type:str]
+    username: ENC[AES256_GCM,data:NTehFLDOfRSgqT8=,iv:P1Zv/FgIss0pWCOwpcN88TyLUSDu/mzJyaP53vf3w5c=,tag:zsf3V8TYEybk3cIpVjvf0g==,type:str]
+    password: ENC[AES256_GCM,data:ziulzFW1F6uXpl3orTOi,iv:RlUlP/x4cK+kQe2enV2I4QxAV6DD+M1luWJoYcHJ1ig=,tag:MTecTmnmtWguTE9TBecsAQ==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1fd6r86ze2kzv9fey9y0jx47uekpkjsat76l2t6uesfhjpx7463cqtawww5
           enc: |
@@ -21,8 +19,7 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-28T13:03:13Z"
-    mac: ENC[AES256_GCM,data:QZSgBSbCDoFR+4Adq++I3hxrggU/NR47t/nrGxD5O0Z+KjmGoKcUGyEDAoKQht/x2OU1vQtOroLxPSWJ+BhgLSGjh01T9jEX6fy4qNN6/aXxDe0XFNYL/2ChBf/wC+z3ZgD5XZ+4Eg8TAxTxXImTopI7gQ/vn6TasIF7nlcupTI=,iv:+xjH0MeSW2dJsZ2mSHA//aECuG0gCpqxKbug5QxbWu4=,tag:mdg4G6sCazMKdhwHSITsYw==,type:str]
-    pgp: []
+    lastmodified: "2025-04-01T17:47:12Z"
+    mac: ENC[AES256_GCM,data:WnWwpjomDTBGydS/VJde9ouGsnErhJxq3KTV68O5PYMOAQE8olkUhtV6rtEWQhT4N4evc4K+jFzjrzJwVCW3GnzX08b9KgDr3/6qDoEc62b1J7Ck3it6fpZ3PGN2PVcSq8MXflHN0YLMCvxkyOfIycGQ6DdQDA3AkB8BEXpZvtY=,iv:JT2OltXBEUJJHAU4ZRyEyDJ/leYr4OdFGEKilhbTzFA=,tag:0WxXKiJrA9h5hkR2lhIC0w==,type:str]
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.4
+    version: 3.10.0
