--- a/argocd/apps/infra/gitea/manifests/values.yaml
+++ b/argocd/apps/infra/gitea/manifests/values.yaml
@@ -4,16 +4,20 @@ global:
 replicaCount: 1
 
 gitea:
+  admin:
+    existingSecret: gitea-secrets
   oauth:
     - name: "Authentik"
       provider: openidConnect
       existingSecret: gitea-secrets
       autoDiscoverUrl: https://authentik.yanello.net/application/o/gitea/.well-known/openid-configuration
       iconUrl: "https://goauthentik.io/img/icon.png"
-      scopes: "email profile"
+      scopes: "email profile gitea"
   config:
     server:
       ROOT_URL: https://gitea.yanello.net/
+      ENABLE_AUTO_REGISTRATION: "true"
+      
 
 actions:
   enabled: false
@@ -27,11 +31,11 @@ metrics:
 redis-cluster:
   enabled: false
 redis:
-  enabled: true  
+  enabled: true
 
 postgresql-ha:
   enabled: false
-  
+
 postgresql:
   enabled: true
   global:
