--- a/argocd/apps/infra/backstage/kustomization.yaml
+++ b/argocd/apps/infra/backstage/kustomization.yaml
@@ -1,9 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-      
+
+resources:
+  - ./manifests/http-route.yaml
+
 helmCharts:
   - name: backstage
-    namespace: bacstage
+    namespace: backstage
     releaseName: backstage
     repo: https://backstage.github.io/charts
     version: "2.4.1"
