--- a/argocd/apps/infra/backstage/manifests/http-route.yaml
+++ b/argocd/apps/infra/backstage/manifests/http-route.yaml
@@ -19,8 +19,8 @@ spec:
   - backstage.yanello.net
   rules:
   - backendRefs:
-    - name: 
+    - name: backstage
       namespace: backstage
-      port: 80
+      port: 7007
       
 
