--- a/argocd/apps/infra/gitea/kustomization.yaml
+++ b/argocd/apps/infra/gitea/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ./manifests/http-route.yaml
+  - ./manifests/route.yaml
 
 generators:
   - ./manifests/secret-generator.yaml
