--- a/argocd/apps/infra/gitea/manifests/route.yaml
+++ b/argocd/apps/infra/gitea/manifests/route.yaml
@@ -30,10 +30,28 @@ metadata:
   namespace: gitea
 spec:
   parentRefs:
-    - name: gateway-api
-      namespace: istio-system
+    - name: gitea-gateway
       sectionName: ssh
   rules:
     - backendRefs:
         - name: gitea-ssh
           port: 22
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: Gateway
+metadata:
+  name: gitea-gateway
+spec:
+  addresses:
+    - value: 10.10.8.11
+      type: IPAddress
+  gatewayClassName: istio
+  listeners:
+    - name: ssh
+      protocol: TCP
+      port: 2200
+      allowedRoutes:
+        namespaces:
+          from: All
+        kinds:
+          - kind: TCPRoute
