--- a/argocd/apps/infra/gitea/manifests/route.yaml
+++ b/argocd/apps/infra/gitea/manifests/route.yaml
@@ -51,5 +51,7 @@ spec:
       protocol: TCP
       port: 2200
       allowedRoutes:
+        namespaces:
+          from: Same
         kinds:
           - kind: TCPRoute
