--- a/argocd/apps/infra/gitea/manifests/values.yaml
+++ b/argocd/apps/infra/gitea/manifests/values.yaml
@@ -24,9 +24,11 @@ service:
   ssh:
     type: LoadBalancer
     loadBalancerIP: 10.10.8.11
+    clusterIP: ""
   http:
     type: LoadBalancer
-    loadBalancerIP: 10.10.8.11
+    loadBalancerIP: 10.10.8.1
+    clusterIP: ""
 
 actions:
   enabled: false
