--- a/argocd/apps/infra/gitea/manifests/values.yaml
+++ b/argocd/apps/infra/gitea/manifests/values.yaml
@@ -24,9 +24,15 @@ service:
   ssh:
     type: LoadBalancer
     loadBalancerIP: 10.10.8.11
-    clusterIP:
-
-
+    clusterIP: 
+    annotations:
+      metallb.universe.tf/allow-shared-ip: "true"
+  http:
+    type: LoadBalancer
+    loadBalancerIP: 10.10.8.1
+    clusterIP: 
+    annotations:
+      metallb.universe.tf/allow-shared-ip: "true"
 actions:
   enabled: false
 
