--- a/argocd/apps/frigate/kustomization.yaml
+++ b/argocd/apps/frigate/kustomization.yaml
@@ -40,7 +40,7 @@ helmCharts:
       version: "7.8.0"
       releaseName: frigate
       namespace: frigate
-      valuesFile: ./manifests/config.yaml
+      valuesFile: ./manifests/values.yaml
 
 images:
   - name: frigate
