--- a/argocd/apps/infra/renovate/values.yaml
+++ b/argocd/apps/infra/renovate/values.yaml
@@ -107,9 +107,9 @@ service:
   port: 8080
 
 resources:
-  # limits:
-  #   cpu: 100m
-  #   memory: 500Mi
+  limits:
+    cpu: 500m
+    memory: 2000Mi
   requests:
     cpu: 10m
-    memory: 200Mi
+    memory: 800Mi
