--- a/argocd/apps/paperless/manifests/deploy.yaml
+++ b/argocd/apps/paperless/manifests/deploy.yaml
@@ -50,7 +50,10 @@ spec:
           resources:
             requests:
               cpu: 10m
-              memory: 1Gi
+              memory: 700Mi
+            limits:
+              cpu: 250m
+              memory: 1500Mi
       restartPolicy: Always
       volumes:
         - name: data
