--- a/argocd/apps/media-server/kometa/manifests/cronjob.yaml
+++ b/argocd/apps/media-server/kometa/manifests/cronjob.yaml
@@ -50,11 +50,11 @@ spec:
 
               resources:
                 requests:
-                  memory: "256Mi"
+                  memory: "500Mi"
                   cpu: "200m"
-                # limits:
-                #   memory: "512Mi"
-                #   cpu: "500m"
+                limits:
+                  memory: "1500Mi"
+                  cpu: "500m"
           volumes:
             - name: config-kometa
               configMap:
