--- a/argocd/apps/open-webui/manifests/values.yaml
+++ b/argocd/apps/open-webui/manifests/values.yaml
@@ -8,8 +8,15 @@ ollama:
     enabled: true
     storageClass: nfs-storage
 
-nodeSelector:
-  nvidia.com/gpu.present: true
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - marcus-server
 
 tika:
   enabled: true
