old tag for ddby

--- a/argocd/apps/dev/dollardollar/kustomization.yaml
+++ b/argocd/apps/dev/dollardollar/kustomization.yaml
@@ -12,5 +12,5 @@ generators:
   
 images:
   - name: docker.cloudsmith.io/myanello/apps/dollar
-    newTag: dev
+    newTag: v4.0
     newName: harung43/dollardollar
