--- a/argocd/apps/infra/app-set.yaml
+++ b/argocd/apps/infra/app-set.yaml
@@ -28,3 +28,9 @@ spec:
         path: "{{path}}"
         repoURL: https://github.com/myanello/homelab.git
         targetRevision: HEAD
+      transformers:
+      - name: istio-injection
+        jsonPointers:
+        - /metadata/labels
+        values:
+          istio-injection: enabled
