--- a/argocd/apps/infra/monitoring/vmlogs/manifests/http-route.yaml
+++ b/argocd/apps/infra/monitoring/vmlogs/manifests/http-route.yaml
@@ -8,7 +8,7 @@ metadata:
     gethomepage.dev/name: VictoriaLogs
     gethomepage.dev/icon: victoriametrics
     gethomepage.dev/description: ""
-    gethomepage.dev/pod-selector: app.kubernetes.io/name=vmlogs
+    gethomepage.dev/pod-selector: app.kubernetes.io/name=victoria-logs-single
   name: vmlogs-httproute
 spec:
   parentRefs:
@@ -19,6 +19,6 @@ spec:
     - logs.yanello.net
   rules:
     - backendRefs:
-        - name: vmlogs-single
+        - name: victoria-logs-single-server
           namespace: monitoring
-          port: 8429
+          port: 9428
