--- a/argocd/apps/infra/monitoring/app-set.yaml
+++ b/argocd/apps/infra/monitoring/app-set.yaml
@@ -21,6 +21,9 @@ spec:
           selfHeal: true
         syncOptions:
           - CreateNamespace=true
+        managedNamespaceMetadata:
+          labels:
+            istio-injection: disabled
       destination:
         name: in-cluster
         namespace: "monitoring"
