--- a/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/values.yaml
@@ -20,7 +20,7 @@ vmsingle:
         value: "iotawatt"
     extraArgs:
       maxLabelsPerTimeseries: "500"
-      influxListenAddr: ":8428"
+      # influxListenAddr: ":8428"
     serviceSpec:
       spec:
         type: LoadBalancer
