--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmsingle/influx.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmsingle/influx.yaml
@@ -6,3 +6,6 @@ spec:
   retentionPeriod: "5y"
   insertPorts:
     influxPort: "8086"
+  serviceSpec:
+    type: LoadBalancer
+    loadBalancerIP: 10.10.8.12
