--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmsingle/influx.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmsingle/influx.yaml
@@ -1,7 +1,7 @@
 apiVersion: operator.victoriametrics.com/v1beta1
 kind: VMSingle
 metadata:
-  name: influxvmsingle
+  name: influx-vmsingle
 spec:
   retentionPeriod: "5y"
   insertPorts:
