--- a/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmsingle/influx.yaml
+++ b/argocd/apps/infra/monitoring/vm-k8s-stack/manifests/vmsingle/influx.yaml
@@ -7,5 +7,6 @@ spec:
   insertPorts:
     influxPort: "8086"
   serviceSpec:
-    type: LoadBalancer
-    loadBalancerIP: 10.10.8.12
+    spec:
+      type: LoadBalancer
+      loadBalancerIP: 10.10.8.12
